--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meal Web App</title>
+    <title>FlavorVoyage CulinaryExplorer</title>
 
     <!-- Font-awesome Icon Kit -->
     <!-- Importing font-awesome stylesheets and scripts -->
@@ -158,7 +158,7 @@
 
     <!-- Footer -->
     <footer id="footer">
-        <h4>Designed & Developed By <a href="">Amreliya Sejal</a> 🙂</h4>
+        <h4>Designed & ReDeveloped By <a href="">Rajesh Choudhary</a> 🙂</h4>
     </footer>
 
     <!-- Custom JavaScript file -->
